# Neuralnet_to_.mo_package

./: .gitignore  AGENTS.md  HOW_TO_USE.md  PROJECT_CONTEXT.md  README.md
.github/: copilot-instructions.md
Engine/: .gitignore  pyproject.toml  requirements.txt
Engine/src/surrogate_tool/: __init__.py  __main__.py  cli.py  logging_config.py  paths.py
Engine/src/surrogate_tool/attempts/: manager.py
Engine/src/surrogate_tool/contracts/: run_config.py  status.py
Engine/src/surrogate_tool/io/: dataset_loader.py
Engine/src/surrogate_tool/pipeline/: eda.py  fmu_export.py  modelica_export.py  orchestrator.py  preprocess.py  report.py  split_scale.py  train.py
Engine/tests/: conftest.py  test_attempts_manager.py  test_contracts.py  test_dataset_loader.py  test_fmu_export.py  test_modelica_export.py  test_pipeline_roundtrip.py  test_preprocess.py  test_split_scale.py
ExcelUI/: SurrogateGeneratorUI.xlsm
