[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surrogate_tool"
version = "0.1.0"
description = "Excel UI + Python Engine -> One-Click Modelica Surrogate Generator"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]